增加第三方插件vim-gutentags
Signed-off-by: spriteray <spriteray@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "sshpass"]
 	path = sshpass
 	url = https://github.com/kevinburke/sshpass.git
+[submodule "vimfiles/bundle/vim-gutentags"]
+	path = vimfiles/bundle/vim-gutentags
+	url = https://github.com/ludovicchabant/vim-gutentags.git
