--- a/.gitmodules
+++ b/.gitmodules
@@ -4,9 +4,6 @@
 [submodule "vimfiles/bundle/cpp-enhanced"]
 	path = vimfiles/bundle/cpp-enhanced
 	url = https://github.com/octol/vim-cpp-enhanced-highlight.git
-[submodule "vimfiles/bundle/ctrlp"]
-	path = vimfiles/bundle/ctrlp
-	url = https://github.com/kien/ctrlp.vim
 [submodule "vimfiles/bundle/molokai"]
 	path = vimfiles/bundle/molokai
 	url = https://github.com/tomasr/molokai.git
@@ -34,3 +31,9 @@
 [submodule "vimfiles/bundle/vim-gutentags"]
 	path = vimfiles/bundle/vim-gutentags
 	url = https://github.com/ludovicchabant/vim-gutentags.git
+[submodule "vimfiles/bundle/LeaderF"]
+	path = vimfiles/bundle/LeaderF
+	url = https://github.com/Yggdroot/LeaderF
+[submodule "vimfiles/bundle/vim-airline"]
+	path = vimfiles/bundle/vim-airline
+	url = https://github.com/vim-airline/vim-airline.git
