--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "vimfiles/bundle/vim-airline"]
 	path = vimfiles/bundle/vim-airline
 	url = https://github.com/vim-airline/vim-airline.git
+[submodule "vimfiles/bundle/vim-airline-themes"]
+	path = vimfiles/bundle/vim-airline-themes
+	url = https://github.com/vim-airline/vim-airline-themes.git
