add submodule .tmux Signed-off-by: spriteray <spriteray@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "sshpass"]
 	path = sshpass
 	url = https://github.com/kevinburke/sshpass.git
+[submodule ".tmux"]
+	path = .tmux
+	url = https://github.com/gpakosz/.tmux.git
